<resources>
    <string name="app_name">FGithub</string>
    <string name="start_coding_for_your_future_investment">Start coding for your future investment!</string>
    <string name="only_verif">Verified User Only</string>
    <string name="keep_upgraded">Enrich your coding knowledge from other repository</string>


    <string name="name_henry_augusta_harsono">Name : Henry Augusta Harsono</string>
    <string name="emaill_henryaugusta4_gmail_com">Emaill : henryaugusta4@gmail.com</string>
    <string name="git_github_com_henryaugusta">Git : github.com/henryaugusta</string>
    <string name="resume">I experienced as an Android Developer at several small project at my Campus, Organization , and School, responsible to managing organization Linux server, Laravel website and mobile application for one organization in university , Experienced with several Native API\'s for Android Application such as Maps,Camera, and experienced in Building an RESTful API with Laravel Framework and consume it on Mobile App, also have slight experience at basic HTML, CSS Javascript</string>
    <string name="professional_resume">Professional Resume :</string>
    <string name="search">search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="henryaugusta">Henry Augusta</string>
    <string name="success_retrieve_user">User Retrieve Success</string>
    <string name="success">Success</string>
    <string name="see_user_detail">See User Detail</string>
    <string name="not_found404">404</string>
    <string name="user_not_found">User Data Not Found</string>
    <string name="search_github_users_that_might_inspired_you">Start search github users that might inspired you, by typing on searchview above</string>
    <string name="following_z">Following</string>
    <string name="followers_z">Followers</string>
    <string name="loading">Loading</string>
    <string name="loading_repository_count">Loading Repository Count</string>
    <string name="repo_count">Repository Count</string>
    <string name="loading_user_bio">Loading User Bio</string>
    <string name="user_bio">User Bio : </string>
    <string name="no_data">No Data</string>
    <string name="change_language">Change Language</string>
    <string name="background">background</string>
</resources>
